Added speech to text

--- a/templates/submit.html
+++ b/templates/submit.html
@@ -18,6 +18,7 @@
         {% if output %}
         <div class="output"><span id="span">{{output}}</span></div>      
         {% endif %} 
+        <button class="loud submit">Read Aloud</button>
     </div>
     <script src="/static/index.js"></script>
 </body>
