Added Logo Favicon Ico
Model being added

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,15 +10,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Public+Sans:wght@700&family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Mooli&family=Public+Sans:wght@700&family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
     <title>LLM</title>
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
 </head>
 <body>
     <div class="content">
         <div class="logo">
-            <img src="#">
+            <img src="static\Briefify.png" width="100" height="100">
         </div>
         <div class="head">
-            <h1 class="heading">Some Tacky Name</h1>
-            <h3>Some tacky moto</h3>
+            <h1 class="heading">Briefify</h1>
+            <h3>Distilling Complexity, Delivering Clarity</h3>
         </div>
         <div class="container">
             <div class="left-div">
