--- a/templates/index.html
+++ b/templates/index.html
@@ -46,9 +46,10 @@
                 </div>
                 <div class="sum-more">
                     <form action="/">
-                        <label for="type">Choose the type of article:</label>
+                        <label for="type">Choose the type of text:</label>
                         <br>
                         <select name="type" id="type">
+                            <option value="select" selected>Select</option>
                             <option value="news">News</option>
                             <option value="science">Scientific</option>
                             <option value="misc">Arbitrary</option>
