--- a/templates/submit.html
+++ b/templates/submit.html
@@ -19,6 +19,7 @@
         {% if output %}
         <div class="output"><span id="span">{{output}}</span></div>      
         {% endif %} 
+        <i class="fa-solid fa-thumbs-up"></i><i class="fa-solid fa-thumbs-down"></i>
         <button class="loud submit">Read Aloud</button>
     </div>
     <script src="/static/index.js"></script>
