--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Public+Sans:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Public+Sans:wght@700&family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Mooli&family=Public+Sans:wght@700&family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
-    <title>LLM</title>
+    <title>Briefify</title>
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
 </head>
 <body>
