--- a/templates/submit.html
+++ b/templates/submit.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <title>LLM</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <title>Briefify</title>
     <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
 </head>
 <body>
@@ -19,7 +20,14 @@
         {% if output %}
         <div class="output"><span id="span">{{output}}</span></div>      
         {% endif %} 
-        <i class="fa-solid fa-thumbs-up"></i><i class="fa-solid fa-thumbs-down"></i>
+        <span class="feedback">
+            <button id="button1" class="fa-button">
+                <i class="fa-solid fa-thumbs-up"></i>
+            </button>
+                <button id='button2' class="fa-button">
+                    <i class="fa-solid fa-thumbs-down"></i>
+                </button>
+            </span>
         <button class="loud submit">Read Aloud</button>
     </div>
     <script src="/static/index.js"></script>
