--- a/static/style.css
+++ b/static/style.css
@@ -52,7 +52,7 @@ textarea {
 }
 
 .submit {
-    margin: 20% 50% 0 40%;
+    margin: 0 50% 0 40%;
     background-color: #011c2a;
     color: #fafafa;
     cursor: pointer;
